I succesfully integrated forcast on the website, but i have minor issues that i need to fix behind the search for the specified location forecast. Things that I need to do is make light/dark theme and sunrise/sunset card

--- a/public/styles/dashboardStyle.css
+++ b/public/styles/dashboardStyle.css
@@ -8,6 +8,11 @@ body {
         height: auto;
     }
 
+    .hour-description {
+        font-size: 1.5rem;
+        color: #f9a826;
+    }
+
     .search-form {
         display: flex;
         max-width: 70%;
